# trading-system

./: .gitignore  pyproject.toml
data/: stockexpert.db
data/reports/: report_2026-05-03_morning.txt  report_2026-05-04_morning.txt
docs/plans/: 2026-05-04-phase1-trades-api.md
migrations/: 001_add_status_to_trade_journal.py
src/data/: api_orchestrator.py  api_strategy.py  api_trades.py  app.py  collect_all.py  config.py  db_reader.py  db_schema.py  db_writer.py  orchestrator.py  report_generator.py  send_report.py
test/: DATA_SOURCES_SUMMARY.md  run_all_tests.py
test/akshare/: test_fund_flow.py  test_index_daily.py  test_lhb.py  test_market_sentiment.py  test_new_skills.py  test_sector_board.py  test_stock_daily.py
test/cdp/: 2026-05-03-all-sites-coverage-report.md  2026-05-03-cdp-coverage-test.md  2026-05-03-cross-source-validation.md  2026-05-03-cross-validation-report-v2.md  2026-05-03-data-coverage-report-v2.md  2026-05-03-data-coverage-report-v3.md  2026-05-03-data-layer-overall-report-v3.md  2026-05-03-eastmoney-coverage-report.md  2026-05-03-human-browse-coverage-report.md  2026-05-03-zhangtingke-coverage-report.md
test/datasource/: test_akshare.py  test_efinance.py  test_pytdx.py  test_tushare.py
tests/: test_orchestrator.py
tests/analyzers/: __init__.py  test_market_environment.py  test_position_tracker.py  test_sector_resonance.py  test_stock_pattern.py
tests/api/: test_api_trades.py
tests/datasource/: test_baostock.py
tests/evolution/: test_adaptive_tuner.py  test_strategy_reviewer.py  test_trade_journal.py
(+30 files in other folders)
