[project]
name = "trading-system"
version = "0.1.0"
description = "A 股 AI 交易系统"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.18.60",
    "baostock>=0.9.1",
    "efinance>=0.5.8",
    "pytdx>=1.72",
    "tushare>=1.4.29",
    "pandas",
    "websocket-client>=1.7.0",
    "flask>=3.0.0",
    "werkzeug>=3.0.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
